Fix border radius on square covers

--- a/asset/index.css
+++ b/asset/index.css
@@ -394,6 +394,7 @@ img[align='left'] {
   width: 100%;
   height: 100%;
   padding: var(--border);
+  border-radius: var(--border-radius);
 }
 
 .caption {
